Fix dialog title and content spacing issues caused by migration

--- a/modules/web/src/app/core/components/changelog/style.scss
+++ b/modules/web/src/app/core/components/changelog/style.scss
@@ -33,14 +33,9 @@ ul {
   }
 }
 
-.header-title {
-  font-size: variables.$font-size-card-title;
-  padding-bottom: 8px;
-}
-
 .header-info {
   font-size: variables.$font-size-body;
-  padding-bottom: 30px;
+  padding: 0 24px 30px;
 }
 
 .changelog-category {
